<resources>
    <string name="app_name">HearthBeat</string>

    <string name="launch_title">Welcome to\nHeartBeat</string>
    <string name="launch_subtitle">Your companion for HearthStone</string>
    <string name="launch_swipe_to_start">Swipe to start</string>
    <string name="launch_bottom_btn_continue">Enter</string>
    <string name="launch_select_lang">Choose card language pack</string>
    <string name="launch_download">Download</string>
    <string name="launch_download_cards">Download card infos (~1MB)</string>
    <string name="launch_download_skipped_message">You have to fetch the card infos later if you want to create decks.</string>
    <string name="launch_download_now">Start downloading card infos now (~1MB)?</string>
    <string name="launch_please_wait">Please wait</string>
    <string name="launch_download_finished">Download finished</string>
    <string name="launch_download_failed">Download failed</string>

    <string name="feed_refreshing">Refreshing content</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_menu_decklist">Decks</string>
    <string name="drawer_menu_cards">Collection</string>

    <string name="menu_collection_search">Search</string>
    <string name="menu_collection_search_hint">Enter card title</string>

    <string name="class_priest">Priest</string>
    <string name="class_shaman">Shaman</string>
    <string name="class_warrior">Warrior</string>
    <string name="class_rogue">Rogue</string>
    <string name="class_warlock">Warlock</string>
    <string name="class_neutral">Neutral</string>
    <string name="class_paladin">Paladin</string>
    <string name="class_mage">Mage</string>
    <string name="class_hunter">Hunter</string>
    <string name="class_druid">Druid</string>

    <string name="card_details_cardset">Card Set</string>
    <string name="card_details_artitst">Artist Name</string>
    <string name="card_details_howtoget">How to get this Card</string>
    <string name="card_details_howtoget_golden">How to get golden Card</string>
</resources>
