<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".main.DeckBuilderActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/deckbuilder_class_druid"
            style="?android:borderlessButtonStyle"
            android:layout_width="0dip"
            android:layout_height="@dimen/touchfriendly_normal_size"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:contentDescription="@string/class_druid"
            android:src="@drawable/ic_class_druid"/>
        <ImageButton
            android:id="@+id/deckbuilder_class_hunter"
            style="?android:borderlessButtonStyle"
            android:layout_width="0dip"
            android:layout_height="@dimen/touchfriendly_normal_size"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:contentDescription="@string/class_hunter"
            android:src="@drawable/ic_class_hunter"/>
        <ImageButton
            android:id="@+id/deckbuilder_class_mage"
            style="?android:borderlessButtonStyle"
            android:layout_width="0dip"
            android:layout_height="@dimen/touchfriendly_normal_size"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:contentDescription="@string/class_mage"
            android:src="@drawable/ic_class_mage"/>
        <ImageButton
            android:id="@+id/deckbuilder_class_paladin"
            style="?android:borderlessButtonStyle"
            android:layout_width="0dip"
            android:layout_height="@dimen/touchfriendly_normal_size"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:contentDescription="@string/class_paladin"
            android:src="@drawable/ic_class_paladin"/>
        <ImageButton
            android:id="@+id/deckbuilder_class_priest"
            style="?android:borderlessButtonStyle"
            android:layout_width="0dip"
            android:layout_height="@dimen/touchfriendly_normal_size"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:contentDescription="@string/class_priest"
            android:src="@drawable/ic_class_priest"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/deckbuilder_class_rogue"
            style="?android:borderlessButtonStyle"
            android:layout_width="0dip"
            android:layout_height="@dimen/touchfriendly_normal_size"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:contentDescription="@string/class_rogue"
            android:src="@drawable/ic_class_rogue"/>
        <ImageButton
            android:id="@+id/deckbuilder_class_shaman"
            style="?android:borderlessButtonStyle"
            android:layout_width="0dip"
            android:layout_height="@dimen/touchfriendly_normal_size"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:contentDescription="@string/class_shaman"
            android:src="@drawable/ic_class_shaman"/>
        <ImageButton
            android:id="@+id/deckbuilder_class_warlock"
            style="?android:borderlessButtonStyle"
            android:layout_width="0dip"
            android:layout_height="@dimen/touchfriendly_normal_size"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:contentDescription="@string/class_warlock"
            android:src="@drawable/ic_class_warlock"/>
        <ImageButton
            android:id="@+id/deckbuilder_class_warrior"
            style="?android:borderlessButtonStyle"
            android:layout_width="0dip"
            android:layout_height="@dimen/touchfriendly_normal_size"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:contentDescription="@string/class_warrior"
            android:src="@drawable/ic_class_warrior"/>
        <ImageButton
            android:id="@+id/deckbuilder_class_neutral"
            style="?android:borderlessButtonStyle"
            android:layout_width="0dip"
            android:layout_height="@dimen/touchfriendly_normal_size"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:contentDescription="@string/class_neutral"
            android:src="@drawable/ic_class_neutral"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/deckbuilder_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/spacing_small" />

</LinearLayout>
