<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_intermediate"
        android:textSize="@dimen/text_size_xxlarge"
        android:text="@string/launch_title"
        android:textStyle="bold"
        android:textColor="@color/default_black_color"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_intermediate"
        android:text="@string/launch_select_lang"
        android:textColor="@color/default_black_color"/>

    <Spinner
        android:id="@+id/launch_language_spinner"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/touchfriendly_min_size"
        android:entries="@array/langcodes_names" />

    <Button
        android:id="@+id/launch_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launch_download"/>
</LinearLayout>