<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/intro_initial_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="70dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/launch_logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_intermediate"
            android:gravity="center_horizontal"
            android:textSize="@dimen/text_size_xxlarge"
            android:text="@string/launch_title"
            android:textStyle="bold"
            android:textColor="@color/default_black_color"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="@dimen/text_size_medium"
            android:text="@string/launch_subtitle"
            android:textColor="@color/default_header_color"/>
    </LinearLayout>

    <TextView
        android:id="@+id/intro_initial_start_tour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="?attr/selectableItemBackground"
        android:paddingTop="@dimen/spacing_medium"
        android:paddingBottom="@dimen/spacing_medium"
        android:paddingLeft="@dimen/spacing_xlarge"
        android:drawableRight="@drawable/collapsible_closed"
        android:textColor="@color/default_header_color"
        android:textSize="@dimen/text_size_small"
        android:text="@string/launch_swipe_to_start" />
</LinearLayout>